Fix project button on mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -220,6 +220,7 @@ Projects
 	font-weight: bold;
 	border: none;
 	color: white;
+	top: 200px;
 }
 
 #prev {
@@ -694,7 +695,7 @@ External Links
 	}
 
 	.project-button button {
-		top: 180px;
+		top: 150px;
 	}
 }
 
@@ -732,6 +733,22 @@ External Links
 
 	.project-button button  {
 		top: 100px;
+	}
+
+	.about {
+		padding: 100px 0 0 0;
+	}
+
+	.text-section {
+		padding: 10%;
+	}
+
+	.about {
+		padding-bottom: 60px;
+	}
+
+	.image-section {
+		text-align: center;
 	}
 }
 
@@ -851,16 +868,18 @@ External Links
 		width: 90%;
 	}
 
-	.about {
-		padding: 100px 0 0 0;
+	.project-button button  {
+		top: 250px;
+		margin-right: 30%;
 	}
 
-	.text-section {
-		padding: 10%;
+	.menu {
+		margin-top: 100px;
 	}
 
-	.about {
-		padding-bottom: 60px;
+	.projects-title {
+		padding: 200px 50px 0 0px;
+		text-align: center;
 	}
 }
 
@@ -871,6 +890,11 @@ External Links
 }
 
 @media (max-width:500px) {
+	.project-button button  {
+		top: 250px;
+		margin-right: 25%;
+	}
+
 	.intro-text{
 		font-size: 200%;
 		height: 1.4em; 
@@ -903,20 +927,6 @@ External Links
 
 	.certification-button img {
 		margin-top: 22px;
-	}
-
-	.project-button button  {
-		top: 250px;
-		margin-right: 25%;
-	}
-
-	.menu {
-		margin-top: 100px;
-	}
-
-	.projects-title {
-		padding: 200px 50px 0 0px;
-		text-align: center;
 	}
 
 	.menu div {
